--- a/index.html
+++ b/index.html
@@ -11,35 +11,42 @@
     color: white;
     font-family: 'San Francisco', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
       Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  #form-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    width: 100%;
+    max-width: 400px;
     padding: 20px;
+    text-align: center;
   }
   h1 {
     font-weight: 600;
     margin-bottom: 0.3em;
     font-size: 2.5rem;
-    text-align: center;
   }
   p {
     margin-top: 0;
     margin-bottom: 1.5em;
     font-size: 1.1rem;
     opacity: 0.8;
-    text-align: center;
   }
   input[type="text"] {
     padding: 0.75em 1em;
     font-size: 1.1rem;
     border-radius: 6px;
     border: none;
-    width: 250px;
-    max-width: 80vw;
+    width: 100%;
+    max-width: 100%;
     margin-bottom: 1.5em;
     outline: none;
+    box-sizing: border-box;
   }
   input[type="text"]::placeholder {
     color: #999;
@@ -62,19 +69,22 @@
     margin-top: 1em;
     font-weight: 600;
     display: none;
-    text-align: center;
   }
-  /* New styles for info display */
-  .info-container {
-    display: flex;
+  /* Info display styles */
+  #info-container {
     max-width: 600px;
     width: 100%;
     margin-top: 20px;
+    display: none;
+    gap: 40px;
+  }
+  .info-container {
+    display: flex;
     gap: 40px;
   }
   .info-labels {
     flex: 1;
-    color: #999; /* grey color */
+    color: #999; /* grey */
     font-weight: 600;
     line-height: 1.6;
   }
@@ -90,12 +100,11 @@
     <h1>Please enter your Token Number</h1>
     <p>To start your work, enter the Token Number.</p>
     <input type="text" placeholder="Enter your Token Number" id="tokenInput" />
-    <br />
     <button id="continueBtn">Continue</button>
     <div class="error-message" id="errorMsg">Token is incorrect.</div>
   </div>
 
-  <div id="info-container" style="display:none;">
+  <div id="info-container">
     <div class="info-container">
       <div class="info-labels">
         <p>Registered Name:</p>
@@ -106,9 +115,7 @@
         <p>Working Duration:</p>
         <p>Working type:</p>
       </div>
-      <div class="info-values" id="infoValues">
-        <!-- Values will be inserted here -->
-      </div>
+      <div class="info-values" id="infoValues"></div>
     </div>
   </div>
 
