--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 </head>
 <body>
   <div id="form-container">
-    <h1>Please enter your Token Number</h1>
-    <p>To start your work, enter the Token Number.</p>
+    <h2>Please enter your Token Number</h2>
+    <p>To know about your ratings and working code, please enter your token number to continue.</p>
     <input type="text" placeholder="Enter your Token Number" id="tokenInput" />
     <button id="continueBtn">Continue</button>
     <div class="error-message" id="errorMsg">Token is incorrect.</div>
