--- a/index.html
+++ b/index.html
@@ -2,235 +2,173 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Token Verification</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Enter Token</title>
   <style>
     body {
       margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, 'San Francisco', 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       background-color: black;
       color: white;
-      font-family: 'San Francisco', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-      line-height: 1.6;
-      overflow-x: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      flex-direction: column;
+      overflow: hidden;
     }
 
-    .centered {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
+    .container {
       text-align: center;
-      padding: 20px;
+      animation: fadeIn 1s ease-in-out;
     }
 
     h1 {
-      font-weight: 600;
-      font-size: 2.3rem;
-      margin-bottom: 0.3em;
+      font-size: 2.5rem;
+      font-weight: bold;
+      margin-bottom: 10px;
     }
 
     p {
-      font-size: 1.05rem;
-      opacity: 0.85;
+      font-size: 1.2rem;
+      color: #ccc;
+      margin-bottom: 30px;
     }
 
-    input[type="text"] {
-      padding: 0.75em 1em;
-      font-size: 1.1rem;
-      border-radius: 6px;
+    input {
+      padding: 15px;
+      width: 300px;
+      font-size: 1rem;
+      border-radius: 8px;
       border: none;
-      width: 100%;
-      max-width: 360px;
-      margin-top: 1.2em;
-      outline: none;
-      box-sizing: border-box;
-    }
-
-    input[type="text"]::placeholder {
-      color: #999;
+      margin-bottom: 20px;
     }
 
     button {
-      background-color: #0a84ff;
+      padding: 12px 30px;
+      font-size: 1rem;
+      background-color: #007aff;
+      color: white;
       border: none;
-      color: white;
-      font-size: 1.1rem;
-      padding: 0.75em 2em;
-      border-radius: 8px;
+      border-radius: 10px;
       cursor: pointer;
-      margin-top: 1.2em;
-      transition: background-color 0.3s ease;
     }
 
-    button:hover {
-      background-color: #0066cc;
+    .error {
+      color: red;
+      margin-top: 10px;
     }
 
-    .error-message {
-      color: #ff4d4d;
-      font-weight: 600;
-      margin-top: 1em;
-      display: none;
+    .fade {
+      opacity: 0;
+      animation: fadeIn 1s ease-in-out forwards;
     }
 
-    .info-section {
-      display: none;
-      flex-direction: column;
-      align-items: center;
-      padding: 40px 20px;
+    @keyframes fadeIn {
+      to {
+        opacity: 1;
+      }
     }
 
-    .info-box {
+    .info {
       display: flex;
-      gap: 40px;
-      max-width: 700px;
-      width: 100%;
-      margin-top: 20px;
-    }
-
-    .info-labels {
-      flex: 1;
-      color: #888;
-      font-weight: 600;
-      text-align: right;
-      padding-right: 20px;
-    }
-
-    .info-values {
-      flex: 1;
-      color: white;
+      justify-content: space-between;
+      width: 80%;
+      margin-top: 50px;
       text-align: left;
     }
 
-    .fade-in {
-      opacity: 0;
-      transform: translateY(30px);
-      transition: opacity 1s ease, transform 1s ease;
+    .left {
+      color: grey;
+      font-weight: 500;
     }
 
-    .fade-in.visible {
-      opacity: 1;
-      transform: translateY(0);
+    .right {
+      color: white;
+      text-align: right;
     }
 
-    .detail-section {
-      max-width: 750px;
-      margin: 100px auto 60px;
-      padding: 0 20px;
+    .disclaimer {
+      margin-top: 40px;
+      padding: 20px;
+      background-color: #111;
+      border-radius: 10px;
+      width: 80%;
+      animation: fadeIn 2s ease-in-out;
     }
 
-    .detail-section h2 {
-      font-size: 1.8rem;
+    .disclaimer h3 {
       font-weight: bold;
-      margin-bottom: 15px;
     }
-
-    .detail-section p {
-      font-size: 1.05rem;
-      color: #ccc;
-    }
-
   </style>
 </head>
 <body>
-  <div class="centered fade-in" id="formSection">
-    <h1>Please enter your Token Number</h1>
-    <p>To start your work, enter the Token Number.</p>
-    <input type="text" placeholder="Enter your Token Number" id="tokenInput" />
-    <button id="continueBtn">Continue</button>
-    <div class="error-message" id="errorMsg">Token is incorrect.</div>
+  <div class="container" id="loginBox">
+    <h1 class="fade">Please enter your Token Number</h1>
+    <p class="fade">To start your work, enter the Token Number.</p>
+    <input type="text" id="tokenInput" placeholder="Enter your Token Number" />
+    <br />
+    <button onclick="checkToken()">Continue</button>
+    <div id="errorMsg" class="error"></div>
   </div>
 
-  <div class="info-section fade-in" id="infoSection">
-    <div class="info-box">
-      <div class="info-labels">
-        <p>Registered Name:</p>
-        <p>Token Number:</p>
-        <p>Work:</p>
-        <p>Total ratings:</p>
-        <p>Working Date:</p>
-        <p>Working Duration:</p>
-        <p>Working type:</p>
+  <div id="workDetails" style="display: none;" class="fade">
+    <div class="info">
+      <div class="left">
+        Registered Name:<br>
+        Token Number:<br>
+        Work:<br>
+        Total ratings:<br>
+        Working Date:<br>
+        Working Duration:<br>
+        Working type:
       </div>
-      <div class="info-values" id="infoValues"></div>
+      <div class="right" id="detailsRight"></div>
+    </div>
+    <div class="disclaimer fade">
+      <h3>An Important Detail</h3>
+      <p>
+        Token Codes assigned to employees are strictly confidential and must be protected at all times. Under no circumstances should the Token Codes of Enfronisment be shared or distributed to other unknown or unauthorized Enfronisment without a clear and valid reason. Sharing such sensitive access information without proper authorization may lead to security risks and breaches of protocol. However, Token Codes of Enfronisment may be shared with Manager Chandan Paul, as he is officially responsible for overseeing and editing the Operating System.
+      </p>
     </div>
   </div>
 
-  <div class="detail-section fade-in">
-    <h2>An Important Detail</h2>
-    <p>
-      Token Codes assigned to employees are strictly confidential and must be protected at all times.
-      Under no circumstances should the Token Codes of Enfronisment be shared or distributed to other
-      unknown or unauthorized Enfronisment without a clear and valid reason. Sharing such sensitive
-      access information without proper authorization may lead to security risks and breaches of protocol.
-      However, Token Codes of Enfronisment may be shared with Manager Chandan Paul, as he is officially
-      responsible for overseeing and editing the Operating System.
-    </p>
-  </div>
-
   <script>
-    const validTokens = {
-      'MANASA881': {
-        name: 'MANASA JAYANTHI',
-        token: 'MANASA881',
-        work: 'EDITING ENFROK WEBSITE',
-        ratings: 'N.A.',
-        date: '28 SEPTEMBER 2025',
-        duration: '2:30 HOURS (5:00 PM TO 7:30 PM)',
-        type: 'WEBSITE-EDIT'
-      },
-      'CHANDAN882': {
-        name: 'CHANDAN PAUL',
-        token: 'CHANDAN882',
-        work: 'CODING AN OS',
-        ratings: 'N.A.',
-        date: '28 SEPTEMBER 2025',
-        duration: '3:30 HOURS (5 PM TO 8:30 PM)',
-        type: 'CODE-EDIT'
-      }
+    const tokens = {
+      MANASA881: [
+        "MANASA JAYANTHI",
+        "MANASA881",
+        "EDITING ENFROK WEBSITE",
+        "N.A.",
+        "28 SEPTEMBER 2025",
+        "2:30 HOURS (5:00 PM TO 7:30 PM)",
+        "WEBSITE-EDIT"
+      ],
+      CHANDAN882: [
+        "CHANDAN PAUL",
+        "CHANDAN882",
+        "CODING AN OS",
+        "N.A.",
+        "28 SEPTEMBER 2025",
+        "3:30 HOURS (5 PM TO 8:30 PM)",
+        "CODE-EDIT"
+      ]
     };
 
-    const button = document.getElementById('continueBtn');
-    const input = document.getElementById('tokenInput');
-    const errorMsg = document.getElementById('errorMsg');
-    const infoSection = document.getElementById('infoSection');
-    const infoValues = document.getElementById('infoValues');
-    const formSection = document.getElementById('formSection');
+    function checkToken() {
+      const input = document.getElementById('tokenInput').value.trim().toUpperCase();
+      const error = document.getElementById('errorMsg');
 
-    button.addEventListener('click', () => {
-      const token = input.value.trim().toUpperCase();
-      if (validTokens[token]) {
-        errorMsg.style.display = 'none';
-        formSection.style.display = 'none';
-        infoSection.style.display = 'flex';
-
-        const info = validTokens[token];
-        infoValues.innerHTML = `
-          <p>${info.name}</p>
-          <p>${info.token}</p>
-          <p>${info.work}</p>
-          <p>${info.ratings}</p>
-          <p>${info.date}</p>
-          <p>${info.duration}</p>
-          <p>${info.type}</p>
-        `;
+      if (tokens[input]) {
+        document.getElementById('loginBox').style.display = 'none';
+        const details = tokens[input];
+        const right = document.getElementById('detailsRight');
+        right.innerHTML = details.join('<br>');
+        document.getElementById('workDetails').style.display = 'block';
       } else {
-        errorMsg.style.display = 'block';
+        error.textContent = "Token is incorrect.";
       }
-    });
-
-    // Fade-in animations on scroll
-    const observer = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add('visible');
-        }
-      });
-    }, { threshold: 0.2 });
-
-    document.querySelectorAll('.fade-in').forEach((el) => observer.observe(el));
+    }
   </script>
 </body>
 </html>
